fix: floating control z-index fix

--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -506,7 +506,7 @@ ul.task-list {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 7;
+    z-index: 1;
     padding-left: var(--file-margins);
     display: flex;
     justify-content: space-between;
