--- a/src/site/styles/user/theme-switch.css
+++ b/src/site/styles/user/theme-switch.css
@@ -6,6 +6,7 @@
     justify-content: flex-end;
     gap: 15px;
     margin-left:30px;
+    z-index: 9999;
     .svg-icon,
     i {
         cursor: pointer;
